--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-28  Erdal Ronahi  <erdal.ronahi@gmail.com>
+
+	* ku.po: Added Kurdish translations and replaced empty file
+
 2005-10-26  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Fixed typos reported by 
