--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-29  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2005-10-28  Erdal Ronahi  <erdal.ronahi@gmail.com>
 
 	* ku.po: Added Kurdish translations and replaced empty file
