--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-01  Tor Lillqvist  <tml@novell.com>
+
+	* configure.in: Don't look for X_PACKAGES unless building for
+	x11. (#313986, John Ehresman)
+
 2005-10-28  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkentrycompletion.c (_gtk_entry_completion_popup): Add the popup
