--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-01  Tor Lillqvist  <tml@novell.com>
+
+	* configure.in: Don't look for X_PACKAGES unless building for
+	x11. (#313986, John Ehresman)
+
 2005-10-28  Erdal Ronahi  <erdal.ronahi@gmail.com>
 
 	* configure.in: Added ku (Kurdish) to ALL_LINGUAS
