--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-01  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2005-10-27  Dan Damian  <dand@gnome.ro>
 
 	* ro.po: Updated Romanian translation by Misu Moldovan.
