--- a/ChangeLog
+++ b/ChangeLog
@@ -11,10 +11,10 @@
 	too, instead of creating a b&w bitmap with CreateBitmap(). Set up
 	the mask bitmap's contents, ones for those pixels in the color
 	bitmap where the alpha is zero, zero for other pixels. We used to
-	use an unitialized mask bitmap! This meant that icons and cursors
-	created presumably worked more or less by accident. Totally blank
-	icons with zero alpha everywhere (as used by gtktrayicon.c)
-	definitely did not work as expected.
+	use an uninitialized mask bitmap! This meant that icons and
+	cursors created presumably worked more or less by accident.
+	Totally blank icons with zero alpha everywhere (as used by
+	gtktrayicon.c) definitely did not work as expected.
 
 	* gtk/Makefile.am: Include gtkstatusicon.c on all platforms.
 
