--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-04  Tor Lillqvist  <tml@novell.com>
+
+	* gtk/gtkstatusicon.c (gtk_status_icon_set_tooltip): Plug memory
+	leak on Win32.
+
 2005-11-03  Tor Lillqvist  <tml@novell.com>
 
 	* gdk/win32/gdkcursor-win32.c: As there is only one GdkDisplay in
