--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-11-04  Michael Natterer  <mitch@imendio.com>
+
+	* gtk/gtkrc.c (gtk_rc_reparse_all_for_settings): applied patch
+	from maemo-gtk that changes the mtime check for rc files from
+	'>' to '!=', otherwise theme changes go unnoticed when turning
+	back the clock (Tommi Komulainen).
+
 2005-11-04  Tor Lillqvist  <tml@novell.com>
 
 	* gtk/gtkstatusicon.c (gtk_status_icon_set_tooltip): Plug memory
