--- a/gtk/xdgmime/ChangeLog
+++ b/gtk/xdgmime/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-04  Matthias Clasen  <mclasen@redhat.com>
+
+	* xdgmime.c (xdg_mime_list_mime_parents): Prevent
+	a segfault.
+
 2005-10-18  Matthias Clasen  <mclasen@redhat.com>
 
 	* xdgmimecache.c: Make magic comparisons work correctly
