--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-07  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk-update-icon-cache.xml: 
+	* gtk/gtk-update-icon-cache.1: Document the --source option.
+
 2005-10-25  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/tmpl/gtkfilechooser.sgml: Don't use deprecated functions
