--- a/docs/reference/gtk/gtk-update-icon-cache.1
+++ b/docs/reference/gtk/gtk-update-icon-cache.1
@@ -2,7 +2,7 @@
 .\" It was generated using the DocBook XSL Stylesheets (version 1.69.1).
 .\" Instead of manually editing it, you probably should edit the DocBook XML
 .\" source for it and then use the DocBook XSL Stylesheets to regenerate it.
-.TH "GTK\-UPDATE\-ICON\-CACH" "1" "08/26/2005" "" ""
+.TH "GTK\-UPDATE\-ICON\-CACH" "1" "11/07/2005" "" ""
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -11,13 +11,13 @@
 gtk\-update\-icon\-cache \- Icon theme caching utility
 .SH "SYNOPSIS"
 .HP 22
-\fBgtk\-update\-icon\-cache\fR [\-\-force] [\-\-index\-only] [\-\-ignore\-theme\-index] [\-\-quiet] {iconpath}
+\fBgtk\-update\-icon\-cache\fR [\-\-force] [\-\-ignore\-theme\-index] [\-\-index\-only] [\-\-source\ [name]] [\-\-quiet] {iconpath}
 .SH "DESCRIPTION"
 .PP
 \fBgtk\-update\-icon\-cache\fR
 creates mmap()able cache files for icon themes.
 .PP
-If expects to be given the path to a icon theme directory containing an
+It expects to be given the path to a icon theme directory containing an
 \fIindex.theme\fR, e.g.
 \fI/usr/share/icons/hicolor\fR, and writes a
 \fIicon\-theme.cache\fR
@@ -38,6 +38,11 @@ refuses to create an icon cache in a directory which does not appear to be the t
 .TP
 \-\-index\-only, \-i
 Don't include image data in the cache.
+.TP
+\-\-source, \-c
+Output a C header file declaring a constant
+\fIname\fR
+with the contents of the icon cache.
 .TP
 \-\-quiet, \-q
 Turn off verbose output.
